main page, reeglid

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+      </head>
 
       <body>
+        <div class="center header">
+            <h1>LENNUK 96</h1>
 
-            <h1>Lennuk 96</h1>
+        </div>
+        <img src="lennuk.svg" alt="" class="lennuk">
+        <div class="center header">
+            <ul>
+                <li><a href="meist.html">MEIST</a></li>
+                <li><a href="registreeri.html">REGISTREERI</a></li>
+                <li><a href="reeglid.html">REEGLID</a></li>
+            </ul>
+        </div>
+
 
       </body>
 
