--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1>LENNUK 96</h1>
 
         </div>
-        <img src="lennuk.svg" alt="" class="lennuk">
+        <img src="Lennuk.svg" alt="" class="lennuk">
         <div class="center header">
             <ul>
                 <li><a href="meist.html">MEIST</a></li>
