--- a/meist.html
+++ b/meist.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Meist</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-$END$
+<div>
+    <div class="nav">
+        <a href="index.html"><img src="logo-modified.png" alt=""></a>
+
+        <a href="meist.html">MEIST</a>
+        <a href="registreeri.html">REGISTREERI</a>
+        <a href="reeglid.html">REEGLID</a>
+    </div>
+    <div class="flex">
+        <div class="left">
+            <h2>MEIST</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean convallis at ante et scelerisque. Praesent sed erat nisi. Donec non iaculis mauris, ut vehicula eros. Ut sed dignissim dolor. Fusce sed turpis at nisl rutrum pulvinar. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc nisl libero, tincidunt at congue convallis, varius ac ipsum. Sed pulvinar sagittis elit, at rhoncus felis vestibulum a. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras suscipit nisi vitae dui ultrices tincidunt. Vestibulum suscipit pretium mauris viverra iaculis. Ut fringilla auctor dignissim. Nulla ex ex, varius nec metus ut, semper ultrices urna. Ut sit amet tellus pharetra, fermentum nisi vel, pellentesque enim. Etiam in libero imperdiet, porttitor augue vel, blandit justo. Donec commodo ultricies lectus, nec auctor orci venenatis ut. Sed ipsum lectus, aliquet at justo a, ornare vehicula nulla. Nullam fringilla purus non enim tincidunt, non hendrerit erat gravida. Ut vitae ipsum at urna euismod gravida eu et justo. Phasellus id pharetra tortor. Vivamus id neque ac nisl commodo elementum eu at quam. Fusce in hendrerit tellus, ac ultrices libero. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            </p>
+        </div>
+        <div class="left">
+            <h2 class="title">KOHTUNIKUD</h2>
+            <div>
+                <ul>
+                    <div class="name">
+                        <p>
+                            KARL HENDRIK BACHMANN
+                        </p>
+                            <img src="pilt1.png">
+                    </div>
+                </ul>
+                <ul>
+                    <div class="name">
+                        <p>
+                            KAREL VESILIND
+                        </p>
+                            <img src="pilt2.png">
+                    </div>
+                </ul>
+                <ul>
+                    <div class="name">
+                        <p>
+                            KUSTU KÜNNAPAS
+                        </p>
+                            <img src="pilt3.png">
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
