--- a/registreeri.html
+++ b/registreeri.html
@@ -15,7 +15,7 @@
     <a href="reeglid.html">REEGLID</a>
 </div>
     <div>
-        <h2>REGISTREERI</h2>
+        <h2 class="title">REGISTREERI</h2>
         <div class="register">
             <form>
             <div class="form">
